Creating site for 0.1-SNAPSHOT

--- a/dev-activity.html
+++ b/dev-activity.html
@@ -145,7 +145,7 @@
  </div> 
  <div class="section"> 
   <h3 id="Changes_between_2013-06-15_and_2013-07-16">Changes between 2013-06-15 and 2013-07-16</h3> 
-  <p>Total commits: 132<br />Total number of files changed: 349</p> 
+  <p>Total commits: 134<br />Total number of files changed: 349</p> 
   <table border="0" class="bodyTable table table-striped table-hover"> 
    <thead> 
     <tr class="a"> 
@@ -162,7 +162,7 @@
     </tr> 
     <tr class="a"> 
      <td>Martin Lau &lt;m@hum.ph&gt;</td> 
-     <td>86</td> 
+     <td>88</td> 
      <td>349</td> 
     </tr> 
    </tbody> 
@@ -193,7 +193,7 @@
 		<div class="row">
 			<div class="span12">
 				<p class="pull-right"><a href="#">Back to top</a></p>
-				<p class="copyright">Copyright &copy;2013. All Rights Reserved.</p>
+				<p class="copyright">Copyright &copy;2013 Martin Lau. All Rights Reserved.</p>
 				<p class="version-date"><span class="projectVersion">Version: 0.1-SNAPSHOT. </span><span class="publishDate">Last Published: 2013-07-15. </span></p>
 			</div>
 		</div>
