--- a/failsafe-report.html
+++ b/failsafe-report.html
@@ -184,7 +184,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>1.605</td> 
+    <td>1.614</td> 
    </tr> 
   </tbody> 
  </table> 
@@ -226,7 +226,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>1.263</td> 
+    <td>1.279</td> 
    </tr> 
    <tr class="b"> 
     <td><a href="#| Privacy | fixture">| Privacy | fixture</a></td> 
@@ -235,7 +235,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>0.053</td> 
+    <td>0.049</td> 
    </tr> 
    <tr class="a"> 
     <td><a href="#| About | fixture">| About | fixture</a></td> 
@@ -244,7 +244,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>0.047</td> 
+    <td>0.052</td> 
    </tr> 
    <tr class="b"> 
     <td><a href="#| Join | fixture">| Join | fixture</a></td> 
@@ -253,7 +253,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>0.05</td> 
+    <td>0.047</td> 
    </tr> 
    <tr class="a"> 
     <td><a href="#| Terms of use | fixture">| Terms of use | fixture</a></td> 
@@ -262,7 +262,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>0.051</td> 
+    <td>0.048</td> 
    </tr> 
    <tr class="b"> 
     <td><a href="#| Contact | fixture">| Contact | fixture</a></td> 
@@ -271,7 +271,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>0.052</td> 
+    <td>0.048</td> 
    </tr> 
    <tr class="a"> 
     <td><a href="#| Log in | fixture">| Log in | fixture</a></td> 
@@ -280,7 +280,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>0.04</td> 
+    <td>0.042</td> 
    </tr> 
   </tbody> 
  </table> 
@@ -340,7 +340,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.066</td> 
+     <td>0.067</td> 
     </tr> 
     <tr class="a"> 
      <td><a href="#| simplex | slate |"><i class="icon-ok"></i></a></td> 
@@ -350,7 +350,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.051</td> 
+     <td>0.055</td> 
     </tr> 
     <tr class="b"> 
      <td><a href="#Scenario: Anonymous Access to Administration Pages"><i class="icon-ok"></i></a></td> 
@@ -360,7 +360,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.081</td> 
+     <td>0.08</td> 
     </tr> 
     <tr class="a"> 
      <td><a href="#| shamrock | simplex |"><i class="icon-ok"></i></a></td> 
@@ -370,7 +370,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.048</td> 
+     <td>0.053</td> 
     </tr> 
     <tr class="b"> 
      <td><a href="#| spacelab | spruce |"><i class="icon-ok"></i></a></td> 
@@ -380,7 +380,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.071</td> 
+     <td>0.058</td> 
     </tr> 
     <tr class="a"> 
      <td><a href="#| amelia | cerulean |"><i class="icon-ok"></i></a></td> 
@@ -390,7 +390,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.097</td> 
+     <td>0.096</td> 
     </tr> 
     <tr class="b"> 
      <td><a href="#Scenario: Anonymous Access to Secure Pages"><i class="icon-ok"></i></a></td> 
@@ -400,7 +400,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.043</td> 
+     <td>0.045</td> 
     </tr> 
     <tr class="a"> 
      <td><a href="#| superhero | united |"><i class="icon-ok"></i></a></td> 
@@ -410,7 +410,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.059</td> 
+     <td>0.068</td> 
     </tr> 
     <tr class="b"> 
      <td><a href="#Scenario: Authenticated Access to Secure Pages"><i class="icon-ok"></i></a></td> 
@@ -420,7 +420,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.058</td> 
+     <td>0.052</td> 
     </tr> 
     <tr class="a"> 
      <td><a href="#| spruce | superhero |"><i class="icon-ok"></i></a></td> 
@@ -430,7 +430,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.052</td> 
+     <td>0.054</td> 
     </tr> 
     <tr class="b"> 
      <td><a href="#| cerulean | cosmo |"><i class="icon-ok"></i></a></td> 
@@ -450,7 +450,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.052</td> 
+     <td>0.053</td> 
     </tr> 
     <tr class="b"> 
      <td><a href="#| default | journal |"><i class="icon-ok"></i></a></td> 
@@ -460,7 +460,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.048</td> 
+     <td>0.049</td> 
     </tr> 
     <tr class="a"> 
      <td><a href="#| slate | spacelab |"><i class="icon-ok"></i></a></td> 
@@ -470,7 +470,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.054</td> 
+     <td>0.051</td> 
     </tr> 
     <tr class="b"> 
      <td><a href="#Scenario: Authenticated Access to Administration Pages"><i class="icon-ok"></i></a></td> 
@@ -490,7 +490,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.04</td> 
+     <td>0.039</td> 
     </tr> 
     <tr class="b"> 
      <td><a href="#| united | amelia |"><i class="icon-ok"></i></a></td> 
@@ -500,7 +500,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.134</td> 
+     <td>0.139</td> 
     </tr> 
     <tr class="a"> 
      <td><a href="#Scenario: Administrative Access to Secure Pages"><i class="icon-ok"></i></a></td> 
@@ -510,7 +510,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.051</td> 
+     <td>0.048</td> 
     </tr> 
     <tr class="b"> 
      <td><a href="#| cyborg | default |"><i class="icon-ok"></i></a></td> 
@@ -520,7 +520,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.05</td> 
+     <td>0.054</td> 
     </tr> 
     <tr class="a"> 
      <td><a href="#Scenario: Administrative Access to Administration Pages"><i class="icon-ok"></i></a></td> 
@@ -530,7 +530,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.06</td> 
+     <td>0.049</td> 
     </tr> 
     <tr class="b"> 
      <td><a href="#| journal | readable |"><i class="icon-ok"></i></a></td> 
@@ -540,7 +540,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.051</td> 
+     <td>0.072</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -570,7 +570,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.053</td> 
+     <td>0.049</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -600,7 +600,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.047</td> 
+     <td>0.052</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -630,7 +630,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.05</td> 
+     <td>0.047</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -660,7 +660,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.051</td> 
+     <td>0.048</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -690,7 +690,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.052</td> 
+     <td>0.048</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -720,7 +720,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.04</td> 
+     <td>0.042</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -759,7 +759,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>| cosmo | cyborg |</td> 
-     <td>0.066</td> 
+     <td>0.067</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -792,7 +792,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>| simplex | slate |</td> 
-     <td>0.051</td> 
+     <td>0.055</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -820,7 +820,7 @@ function toggleDisplay(elementId) {
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>| Log in | fixture.io - Login |</td> 
-     <td>0.04</td> 
+     <td>0.042</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -868,7 +868,7 @@ function toggleDisplay(elementId) {
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>Scenario: Anonymous Access to Administration Pages</td> 
-     <td>0.04</td> 
+     <td>0.039</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -901,7 +901,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>| shamrock | simplex |</td> 
-     <td>0.048</td> 
+     <td>0.053</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -914,7 +914,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>Given I open any page</td> 
-     <td>0</td> 
+     <td>0.001</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -934,7 +934,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>| spacelab | spruce |</td> 
-     <td>0.071</td> 
+     <td>0.057</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -952,7 +952,7 @@ function toggleDisplay(elementId) {
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>When I click on the link &quot;About&quot;</td> 
-     <td>0</td> 
+     <td>0.001</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
@@ -962,7 +962,7 @@ function toggleDisplay(elementId) {
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>| About | fixture.io - About |</td> 
-     <td>0.047</td> 
+     <td>0.051</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -990,7 +990,7 @@ function toggleDisplay(elementId) {
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>| Privacy | fixture.io - Privacy |</td> 
-     <td>0.053</td> 
+     <td>0.049</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -1003,7 +1003,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>Given I open any page</td> 
-     <td>0.001</td> 
+     <td>0.002</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -1023,7 +1023,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>| amelia | cerulean |</td> 
-     <td>0.096</td> 
+     <td>0.094</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -1051,7 +1051,7 @@ function toggleDisplay(elementId) {
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>Scenario: Anonymous Access to Secure Pages</td> 
-     <td>0.043</td> 
+     <td>0.045</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -1084,7 +1084,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>| superhero | united |</td> 
-     <td>0.059</td> 
+     <td>0.068</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -1117,7 +1117,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>Scenario: Authenticated Access to Secure Pages</td> 
-     <td>0.058</td> 
+     <td>0.052</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -1173,7 +1173,7 @@ function toggleDisplay(elementId) {
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>| Terms of use | fixture.io - Terms of use |</td> 
-     <td>0.051</td> 
+     <td>0.048</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -1206,7 +1206,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>| spruce | superhero |</td> 
-     <td>0.052</td> 
+     <td>0.054</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -1272,7 +1272,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>| readable | shamrock |</td> 
-     <td>0.052</td> 
+     <td>0.053</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -1305,7 +1305,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>| default | journal |</td> 
-     <td>0.048</td> 
+     <td>0.049</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -1338,7 +1338,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>| slate | spacelab |</td> 
-     <td>0.054</td> 
+     <td>0.051</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -1366,7 +1366,7 @@ function toggleDisplay(elementId) {
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>| Join | fixture.io - Join |</td> 
-     <td>0.05</td> 
+     <td>0.047</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -1437,7 +1437,7 @@ function toggleDisplay(elementId) {
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>Scenario: Invalid Authentication</td> 
-     <td>0.04</td> 
+     <td>0.039</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -1470,7 +1470,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>| united | amelia |</td> 
-     <td>0.134</td> 
+     <td>0.139</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -1503,7 +1503,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>Scenario: Administrative Access to Secure Pages</td> 
-     <td>0.051</td> 
+     <td>0.048</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -1536,7 +1536,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>| cyborg | default |</td> 
-     <td>0.05</td> 
+     <td>0.054</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -1569,7 +1569,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>Scenario: Administrative Access to Administration Pages</td> 
-     <td>0.06</td> 
+     <td>0.049</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -1602,7 +1602,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>| journal | readable |</td> 
-     <td>0.051</td> 
+     <td>0.072</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -1630,7 +1630,7 @@ function toggleDisplay(elementId) {
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>| Contact | fixture.io - Contact |</td> 
-     <td>0.052</td> 
+     <td>0.048</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -1661,7 +1661,7 @@ function toggleDisplay(elementId) {
 		<div class="row">
 			<div class="span12">
 				<p class="pull-right"><a href="#">Back to top</a></p>
-				<p class="copyright">Copyright &copy;2013. All Rights Reserved.</p>
+				<p class="copyright">Copyright &copy;2013 Martin Lau. All Rights Reserved.</p>
 				<p class="version-date"><span class="projectVersion">Version: 0.1-SNAPSHOT. </span><span class="publishDate">Last Published: 2013-07-15. </span></p>
 			</div>
 		</div>
