--- a/plugin-management.html
+++ b/plugin-management.html
@@ -249,6 +249,11 @@
     <td>1.8</td> 
    </tr> 
    <tr class="a"> 
+    <td>org.codehaus.mojo</td> 
+    <td><a class="externalLink" href="http://mojo.codehaus.org/license-maven-plugin">license-maven-plugin</a></td> 
+    <td>1.5</td> 
+   </tr> 
+   <tr class="b"> 
     <td>org.jetbrains.kotlin</td> 
     <td>kotlin-maven-plugin</td> 
     <td>0.5.748</td> 
@@ -280,7 +285,7 @@
 		<div class="row">
 			<div class="span12">
 				<p class="pull-right"><a href="#">Back to top</a></p>
-				<p class="copyright">Copyright &copy;2013. All Rights Reserved.</p>
+				<p class="copyright">Copyright &copy;2013 Martin Lau. All Rights Reserved.</p>
 				<p class="version-date"><span class="projectVersion">Version: 0.1-SNAPSHOT. </span><span class="publishDate">Last Published: 2013-07-15. </span></p>
 			</div>
 		</div>
