--- a/plugin-updates-report.html
+++ b/plugin-updates-report.html
@@ -149,7 +149,7 @@
    <tr class="a"> 
     <td><i class="icon-ok"></i></td> 
     <td># of plugins using the latest version available</td> 
-    <td>20</td> 
+    <td>21</td> 
    </tr> 
    <tr class="b"> 
     <td><i class="icon-warning-sign"></i></td> 
@@ -182,7 +182,7 @@
   <h3 id="Plugin_Management">Plugin Management</h3> 
   <table border="0" class="bodyTable table table-striped table-hover"> 
    <thead> 
-    <tr class="b"> 
+    <tr class="a"> 
      <th>Status</th> 
      <th>Group Id</th> 
      <th>Artifact Id</th> 
@@ -419,6 +419,17 @@
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
+     <td>org.codehaus.mojo</td> 
+     <td>license-maven-plugin</td> 
+     <td><b>1.5</b></td> 
+     <td></td> 
+     <td></td> 
+     <td></td> 
+     <td></td> 
+     <td><i class="icon-ok"></i></td> 
+    </tr> 
+    <tr class="b"> 
+     <td><i class="icon-ok"></i></td> 
      <td>org.jetbrains.kotlin</td> 
      <td>kotlin-maven-plugin</td> 
      <td><b>0.5.748</b></td> 
@@ -443,25 +454,25 @@
   <h3 id="Plugin_com.github.github:site-maven-plugin">Plugin com.github.github:site-maven-plugin</h3> 
   <table border="0" class="bodyTable table table-striped table-hover"> 
    <thead> 
-    <tr class="b"> 
+    <tr class="a"> 
      <th width="80%">Current Version</th> 
      <td>0.8</td> 
     </tr> 
    </thead> 
    <thead> 
-    <tr class="a"> 
+    <tr class="b"> 
      <th width="80%">Artifact Id</th> 
      <td>site-maven-plugin</td> 
     </tr> 
    </thead> 
    <thead> 
-    <tr class="b"> 
+    <tr class="a"> 
      <th width="80%">Group Id</th> 
      <td>com.github.github</td> 
     </tr> 
    </thead> 
    <thead> 
-    <tr class="a"> 
+    <tr class="b"> 
      <th width="80%">Status</th> 
      <td><i class="icon-ok"></i>&nbsp;No newer versions available.</td> 
     </tr> 
@@ -1174,6 +1185,37 @@
   </table> 
  </div> 
  <div class="section"> 
+  <h3 id="Plugin_org.codehaus.mojo:license-maven-plugin">Plugin org.codehaus.mojo:license-maven-plugin</h3> 
+  <table border="0" class="bodyTable table table-striped table-hover"> 
+   <thead> 
+    <tr class="b"> 
+     <th width="80%">Current Version</th> 
+     <td>1.5</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="a"> 
+     <th width="80%">Artifact Id</th> 
+     <td>license-maven-plugin</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="b"> 
+     <th width="80%">Group Id</th> 
+     <td>org.codehaus.mojo</td> 
+    </tr> 
+   </thead> 
+   <thead> 
+    <tr class="a"> 
+     <th width="80%">Status</th> 
+     <td><i class="icon-ok"></i>&nbsp;No newer versions available.</td> 
+    </tr> 
+   </thead> 
+   <tbody> 
+   </tbody> 
+  </table> 
+ </div> 
+ <div class="section"> 
   <h3 id="Plugin_org.jetbrains.kotlin:kotlin-maven-plugin">Plugin org.jetbrains.kotlin:kotlin-maven-plugin</h3> 
   <table border="0" class="bodyTable table table-striped table-hover"> 
    <thead> 
@@ -1229,7 +1271,7 @@
 		<div class="row">
 			<div class="span12">
 				<p class="pull-right"><a href="#">Back to top</a></p>
-				<p class="copyright">Copyright &copy;2013. All Rights Reserved.</p>
+				<p class="copyright">Copyright &copy;2013 Martin Lau. All Rights Reserved.</p>
 				<p class="version-date"><span class="projectVersion">Version: 0.1-SNAPSHOT. </span><span class="publishDate">Last Published: 2013-07-15. </span></p>
 			</div>
 		</div>
