--- a/project-reports.html
+++ b/project-reports.html
@@ -226,7 +226,7 @@
 		<div class="row">
 			<div class="span12">
 				<p class="pull-right"><a href="#">Back to top</a></p>
-				<p class="copyright">Copyright &copy;2013. All Rights Reserved.</p>
+				<p class="copyright">Copyright &copy;2013 Martin Lau. All Rights Reserved.</p>
 				<p class="version-date"><span class="projectVersion">Version: 0.1-SNAPSHOT. </span><span class="publishDate">Last Published: 2013-07-15. </span></p>
 			</div>
 		</div>
