--- a/surefire-report.html
+++ b/surefire-report.html
@@ -184,7 +184,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>32.667</td> 
+    <td>31.652</td> 
    </tr> 
   </tbody> 
  </table> 
@@ -217,7 +217,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>16.391</td> 
+    <td>15.882</td> 
    </tr> 
    <tr class="a"> 
     <td><a href="#io.fixture.interceptor">io.fixture.interceptor</a></td> 
@@ -226,7 +226,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>0.051</td> 
+    <td>0.037</td> 
    </tr> 
    <tr class="b"> 
     <td><a href="#io.fixture.controller">io.fixture.controller</a></td> 
@@ -235,7 +235,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>0.035</td> 
+    <td>0.029</td> 
    </tr> 
    <tr class="a"> 
     <td><a href="#io.fixture.repository">io.fixture.repository</a></td> 
@@ -244,7 +244,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>16.173</td> 
+    <td>15.669</td> 
    </tr> 
    <tr class="b"> 
     <td><a href="#io.fixture.domain">io.fixture.domain</a></td> 
@@ -253,7 +253,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>0.017</td> 
+    <td>0.035</td> 
    </tr> 
   </tbody> 
  </table> 
@@ -284,7 +284,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>5.483</td> 
+     <td>5.316</td> 
     </tr> 
     <tr class="a"> 
      <td><a href="#io.fixture.securityPersistentTokenRepositoryImplTest"><i class="icon-ok"></i></a></td> 
@@ -294,7 +294,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>5.433</td> 
+     <td>5.26</td> 
     </tr> 
     <tr class="b"> 
      <td><a href="#io.fixture.securityUserDetailsManagerImplTest"><i class="icon-ok"></i></a></td> 
@@ -304,7 +304,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>5.475</td> 
+     <td>5.306</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -334,7 +334,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.051</td> 
+     <td>0.037</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -364,7 +364,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.011</td> 
+     <td>0.013</td> 
     </tr> 
     <tr class="a"> 
      <td><a href="#io.fixture.controllerSecureControllerTest"><i class="icon-ok"></i></a></td> 
@@ -374,7 +374,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.006</td> 
+     <td>0.008</td> 
     </tr> 
     <tr class="b"> 
      <td><a href="#io.fixture.controllerStaticControllerTest"><i class="icon-ok"></i></a></td> 
@@ -384,7 +384,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.018</td> 
+     <td>0.008</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -414,7 +414,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>5.396</td> 
+     <td>5.227</td> 
     </tr> 
     <tr class="a"> 
      <td><a href="#io.fixture.repositoryPersistentLoginRepositoryTest"><i class="icon-ok"></i></a></td> 
@@ -424,7 +424,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>5.376</td> 
+     <td>5.211</td> 
     </tr> 
     <tr class="b"> 
      <td><a href="#io.fixture.repositoryUserRepositoryTest"><i class="icon-ok"></i></a></td> 
@@ -434,7 +434,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>5.401</td> 
+     <td>5.231</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -464,7 +464,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.017</td> 
+     <td>0.035</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -483,12 +483,12 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testIndex</td> 
-     <td>0.011</td> 
+     <td>0.012</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testUsers</td> 
-     <td>0</td> 
+     <td>0.001</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -501,7 +501,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testIndex</td> 
-     <td>0.006</td> 
+     <td>0.008</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -514,22 +514,22 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testAccessDenied</td> 
-     <td>0.014</td> 
+     <td>0.007</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testAbout</td> 
-     <td>0.003</td> 
+     <td>0</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testIndex</td> 
-     <td>0</td> 
+     <td>0.001</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testLogin</td> 
-     <td>0.001</td> 
+     <td>0</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
@@ -557,7 +557,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testGetId</td> 
-     <td>0.016</td> 
+     <td>0.035</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -567,7 +567,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testIsNewWithoutVersion</td> 
-     <td>0.001</td> 
+     <td>0</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -580,7 +580,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testPreHandleWithNullThemeName</td> 
-     <td>0.05</td> 
+     <td>0.036</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -608,27 +608,27 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindAllUsernamesWithSingleUser</td> 
-     <td>5.341</td> 
+     <td>5.173</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindAllNames</td> 
-     <td>0.004</td> 
+     <td>0.005</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOne</td> 
-     <td>0.008</td> 
+     <td>0.006</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteWithInvalidName</td> 
-     <td>0.015</td> 
+     <td>0.014</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindAllUsernamesWithMultipleUsers</td> 
-     <td>0.005</td> 
+     <td>0.007</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -638,7 +638,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteWithUsers</td> 
-     <td>0.007</td> 
+     <td>0.006</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -661,7 +661,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteAllForUsernameForUnknownUser</td> 
-     <td>5.344</td> 
+     <td>5.175</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -671,22 +671,22 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOne</td> 
-     <td>0.007</td> 
+     <td>0.009</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteAllForUsernameForUserWithMultiplePersistentLogins</td> 
-     <td>0.006</td> 
+     <td>0.005</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOneWithInvalidSeries</td> 
-     <td>0.004</td> 
+     <td>0.003</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteAllForUsernameForUserWithOnePersistentLogin</td> 
-     <td>0.011</td> 
+     <td>0.015</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -699,27 +699,27 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOne</td> 
-     <td>5.358</td> 
+     <td>5.189</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testExistsWithInvalidUsername</td> 
-     <td>0.007</td> 
+     <td>0.005</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteWithGroupsAndPersistentLogins</td> 
-     <td>0.012</td> 
+     <td>0.013</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOneWithInvalidUsername</td> 
-     <td>0.004</td> 
+     <td>0.005</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDelete</td> 
-     <td>0.007</td> 
+     <td>0.008</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -729,7 +729,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteWithInvalidUsername</td> 
-     <td>0.008</td> 
+     <td>0.006</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -742,12 +742,12 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testAddUserToGroup</td> 
-     <td>5.408</td> 
+     <td>5.237</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteGroup</td> 
-     <td>0.007</td> 
+     <td>0.006</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
@@ -757,22 +757,22 @@ function toggleDisplay(elementId) {
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testCreateGroup</td> 
-     <td>0.009</td> 
+     <td>0.01</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testRenameGroup</td> 
-     <td>0.007</td> 
+     <td>0.008</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testRemoveGroupAuthority</td> 
-     <td>0.009</td> 
+     <td>0.011</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindUsersInGroup</td> 
-     <td>0.006</td> 
+     <td>0.005</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -782,12 +782,12 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testAddGroupAuthority</td> 
-     <td>0.01</td> 
+     <td>0.011</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindAllGroups</td> 
-     <td>0.004</td> 
+     <td>0.005</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -800,22 +800,22 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testUpdateToken</td> 
-     <td>5.4</td> 
+     <td>5.231</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testGetTokenForSeries</td> 
-     <td>0.007</td> 
+     <td>0.006</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testCreateNewToken</td> 
-     <td>0.019</td> 
+     <td>0.015</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testRemoveUserTokens</td> 
-     <td>0.007</td> 
+     <td>0.008</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -828,7 +828,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testLoadUserByUsernameWithInvalidUsername</td> 
-     <td>5.344</td> 
+     <td>5.176</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -838,12 +838,12 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testChangePasswordWithoutAuthentication</td> 
-     <td>0.01</td> 
+     <td>0.009</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testUpdateUser</td> 
-     <td>0.03</td> 
+     <td>0.028</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
@@ -853,7 +853,7 @@ function toggleDisplay(elementId) {
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testChangePasswordWithAuthenticationManagerChangesPassword</td> 
-     <td>0.009</td> 
+     <td>0.01</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
@@ -863,7 +863,7 @@ function toggleDisplay(elementId) {
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testUserExists</td> 
-     <td>0.007</td> 
+     <td>0.006</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
@@ -883,7 +883,7 @@ function toggleDisplay(elementId) {
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testChangePasswordWithoutAuthenticationManagerSetsAuthentication</td> 
-     <td>0.009</td> 
+     <td>0.011</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -914,7 +914,7 @@ function toggleDisplay(elementId) {
 		<div class="row">
 			<div class="span12">
 				<p class="pull-right"><a href="#">Back to top</a></p>
-				<p class="copyright">Copyright &copy;2013. All Rights Reserved.</p>
+				<p class="copyright">Copyright &copy;2013 Martin Lau. All Rights Reserved.</p>
 				<p class="version-date"><span class="projectVersion">Version: 0.1-SNAPSHOT. </span><span class="publishDate">Last Published: 2013-07-15. </span></p>
 			</div>
 		</div>
