--- a/project-summary.html
+++ b/project-summary.html
@@ -173,7 +173,24 @@
  <div class="section"> 
   <h3 id="Project_Organization">Project Organization</h3> 
   <a name="Project_Organization"></a> 
-  <p>This project does not belong to an organization.</p> 
+  <table border="0" class="bodyTable table table-striped table-hover"> 
+   <thead> 
+    <tr class="a"> 
+     <th>Field</th> 
+     <th>Value</th> 
+    </tr> 
+   </thead> 
+   <tbody> 
+    <tr class="b"> 
+     <td>Name</td> 
+     <td>Martin Lau</td> 
+    </tr> 
+    <tr class="a"> 
+     <td>URL</td> 
+     <td>-</td> 
+    </tr> 
+   </tbody> 
+  </table> 
  </div> 
  <div class="section"> 
   <h3 id="Build_Information">Build Information</h3> 
@@ -234,7 +251,7 @@
 		<div class="row">
 			<div class="span12">
 				<p class="pull-right"><a href="#">Back to top</a></p>
-				<p class="copyright">Copyright &copy;2013. All Rights Reserved.</p>
+				<p class="copyright">Copyright &copy;2013 Martin Lau. All Rights Reserved.</p>
 				<p class="version-date"><span class="projectVersion">Version: 0.1-SNAPSHOT. </span><span class="publishDate">Last Published: 2013-07-15. </span></p>
 			</div>
 		</div>
